Pequenas mudanças na index e atualização do bootstrap e font-awesome

--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-# Ignorar a pasta de logs
+# Ignorar pastas do sistema
 queryLogs/
+.vscode/
